--- a/index.html
+++ b/index.html
@@ -11,20 +11,27 @@
                 <div id = "content">
                     <h1> What is the purpose of this page? </h1>
                     <p>
-                        It is indeed interesting to know if an ALS patient condition is stable or deteriorating. <br/>
-                        Until 2018 there was little known biomarkers for ALS. <br/>
+                        It is indeed interesting to know if an ALS patient condition is stable or deteriorating.<br/>
+			Where is the scientific compass that can give you trusted information on a weekly basis?<br/>
+<br>
+                        Until 2018 there was little known biomarkers for ALS. 
                         Thanks to analysis of the ALS database PRO-ACT, scientists learned that some common biomarkers may indicate how a patient situation is evolving. <br/>
                          <br/>
-                        Here we use a simplified interpretation of their data. There are two types of ALS, slow and fast evolving. <br/>
-                        So any biomarker level lay in one of three areas, worse than the fast evolving condition, better than the slow progression, or in between. <br/>
-                        It is also interesting to know how the biomarker is evolving: Does it stay flat or it is worsening? So we ask for two values for each biomarker. <br/>
+			<b>What can you do with those information?</b><br>
+			Ask to your doctor what kind of intervention would pull the offending biomarker in the right area.<br>
+<br>
+			<b>It cannot be as simple as that!</b><br>
+			Certainly it is not enough to stabilize ALS, but now you can track in a scientific manner how the situation is evolving, at least <b>you have a compass</b>. <br>
+			It is still up to your doctor to find how to correct the situation.<br>
                     </p>
-                    We do not store any data, so we are compliant with EU's GDPR.
+                    We do not store any data.
 		    Our indications are extremely simplified with respect to the original publication.<br>
                      <br/> 
                     The publication used for our calculations is :
                     <i>Predicting functional decline and survival in amyotrophic lateral sclerosis <br/>
-                        Mei-Lyn Ong , Pei Fang Tan , Joanna D. Holbrook <br/></i>
+                        Mei-Lyn Ong , Pei Fang Tan , Joanna D. Holbrook <br/>
+https://doi.org/10.1371/journal.pone.0174925
+</i>
                     <h3 style="background-color:Tomato;">We are not medical doctors, nor biologists, so if you have any question, ask to your MD</h3>
 
                     <div id = "form">
@@ -45,17 +52,17 @@
                             most recent value: <input type = "text" name = "CK_mostrecent" />  <br/>
                              <br/>
                             <h2> Weight </h2>
-                            <p> It is important to prevent weight loss. Weight gain is recommended at a gradual pace, about 1-2 pounds gained per month until Body Mass Index (BMI) is in the 25-30 range.</p>
-                            previous value: <input type = "text" name = "Weight_previousvalue" />
+                            <p> It is important to prevent weight loss. Weight gain is recommended at a gradual pace, about 1 kg gained per month until Body Mass Index (BMI) is in the 25-30 range.</p>
+                            weight (in kg) three years before diagnosis: <input type = "text" name = "Weight_previousvalue" />
                             most recent value: <input type = "text" name = "Weight_mostrecent" />  <br/>
                              <br/>
                             <h2> Chloride </h2>
-                            <p> Chloride is sometimes associated with hypoventilation. The normal serum range for chloride is 96 to 107 mEq/L. </p>
+                            <p> Chloride is sometimes associated with hypoventilation. The normal serum range for chloride is 95 to 105 mEq/L. </p>
                             previous value: <input type = "text" name = "CL_previousvalue" />
                             most recent value: <input type = "text" name = "CL_mostrecent" />  <br/>
                              <br/>
                             <h2> Bicarbonate </h2>
-                            <p> The blood value of bicarbonate is one of several indicators of the state of acid–base physiology in the body. A normal bicarbonate result ranges between 23 and 29 mmol/L. </p>
+                            <p> The blood value of bicarbonate is one of several indicators of the state of acid–base physiology in the body. A normal bicarbonate result ranges between 18 and 29 mmol/L. </p>
                             previous value: <input type = "text" name = "Bic_previousvalue" />
                             most recent value: <input type = "text" name = "Bic_mostrecent" />  <br/>
                              <br/>
