--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 			Certainly it is not enough to stabilize ALS, but now you can track in a scientific manner how the situation is evolving, at least <b>you have a compass</b>. <br>
 			It is still up to your doctor to find how to correct the situation.<br>
                     </p>
-                    We do not store any data.
+                    We do not store any data.<br>
 		    Our indications are extremely simplified with respect to the original publication.<br>
+		    The code is available at: https://github.com/Hjertesvikt/ALS-biomarkers
                      <br/> 
                     The publication used for our calculations is :
                     <i>Predicting functional decline and survival in amyotrophic lateral sclerosis <br/>
