--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </p>
                     We do not store any data.<br>
 		    Our indications are extremely simplified with respect to the original publication.<br>
-		    The code is available at: https://github.com/Hjertesvikt/ALS-biomarkers
+		    The code is available at: <link href="https://github.com/Hjertesvikt/ALS-biomarkers"><br>
                      <br/> 
                     The publication used for our calculations is :
                     <i>Predicting functional decline and survival in amyotrophic lateral sclerosis <br/>
